gitops/02-apps/main/higgs-serving/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: higgs-serving
  namespace: private-assistant
spec:
  ports:
  - port: 8000
    targetPort: 8000
    name: http
    protocol: TCP
  selector:
    app: higgs-serving-router
---
apiVersion: v1
kind: Service
metadata:
  name: higgs-serving-worker
  namespace: private-assistant
spec:
  ports:
  - port: 8000
    targetPort: 8000
    name: http
    protocol: TCP
  selector:
    app: higgs-serving
